--- a/index.html
+++ b/index.html
@@ -26,7 +26,12 @@
       color:var(--text); background: radial-gradient(1200px 800px at 10% 10%, #0e1420 0%, #0b0f14 50%, #080b10 100%);
       overflow-x:hidden; 
     }
-
+    
+    .cta {
+      display: flex;
+      align-items: center;
+      gap: 12px;
+    }
     .overlay {
       position: fixed;
       top: 0; left: 0;
@@ -245,7 +250,6 @@
          </div>
        </header>
 
-    
       <div id="musicOverlay" class="overlay">
         <div class="overlay-content">
           <h2>🎶 Pemutar Musik</h2>
@@ -1000,4 +1004,4 @@
 
     </script>
   </body>
-                  </html>
+</html>
