--- a/index.html
+++ b/index.html
@@ -27,11 +27,25 @@
       overflow-x:hidden; 
     }
     
-    .cta {
+    .nav {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+
+    .brand {
       display: flex;
       align-items: center;
       gap: 12px;
+      margin-right: 24px;
     }
+
+    .cta {
+      display: flex;
+      align-items: center;
+      gap: 14px;
+    }
+    
     .overlay {
       position: fixed;
       top: 0; left: 0;
