--- a/index.html
+++ b/index.html
@@ -1200,7 +1200,7 @@
     <div class="accordion shine" data-acc>
       <div class="acc-head" role="button" aria-expanded="false">
         <div>
-          <div class="acc-title">🖊 𝐅𝐈𝐓𝐔𝐑 𝐓𝐎𝐎𝐋𝐒</div>
+          <div class="acc-title">⚙️ 𝐅𝐈𝐓𝐔𝐑 𝐓𝐎𝐎𝐋𝐒</div>
           <div class="acc-desc">Mepercantik Text</div>
         </div>
         <svg class="chev" width="18" height="18" viewBox="0 0 24 24" fill="none" 
