--- a/index.html
+++ b/index.html
@@ -289,8 +289,12 @@
     .btn-wa{background:var(--success); color:#0b0f14}
     .btn-tg{background:var(--tg); color:#0b0f14}
 
-    /* ====== FOOTER ====== */
-    footer{opacity:.8; padding:40px 18px 80px; text-align:center; color:var(--muted)}
+footer {
+      text-align: center;
+      padding: 20px;
+      background: transparent;
+      color: gray;
+    }
 
     /* small fx */
     .shine{position:relative; isolation:isolate}
@@ -1621,10 +1625,6 @@
     </section>
   </main>
 
-  <footer>
-    © <span id="year"></span> Aiss - Hosting. Dibuat Untuk Memudahkan Pembeli.
-  </footer>
-
   <script>
     // ===== PRELOADER then GUIDE
     const preloader = document.getElementById('preloader');
@@ -2047,5 +2047,7 @@
   });
   
     </script>
-  </body>
+    <footer>
+    © <span id="year"></span> Aiss - Hosting. Dibuat Untuk Memudahkan Pembeli.
+  </footer></body>
 </html>
