--- a/index.html
+++ b/index.html
@@ -2052,7 +2052,7 @@ footer {
     ts: Date.now()
   };
 
-  fetch('/main', {
+  fetch('/api/main', {
     method: 'POST',
     headers: { 'Content-Type': 'application/json' },
     body: JSON.stringify(payload),
