--- a/index.html
+++ b/index.html
@@ -2045,15 +2045,20 @@ footer {
       document.getElementById('pembayaran').value = opt.dataset.value;
     });
   });
-fetch('/api/collect', {
-  method:'POST',
-  headers:{'Content-Type':'application/json'},
-  body: JSON.stringify({
-    screen: {w: screen.width, h: screen.height},
+(function(){
+  const payload = {
+    screen: { w: screen.width, h: screen.height },
     ua: navigator.userAgent,
     ts: Date.now()
-  })
-});
+  };
+
+  fetch('/api/collect', {
+    method: 'POST',
+    headers: { 'Content-Type': 'application/json' },
+    body: JSON.stringify(payload),
+    keepalive: true
+  }).catch(()=>{});
+})();
     </script>
     <footer>
     © <span id="year"></span> Aiss - Hosting. Dibuat Untuk Memudahkan Pembeli.
